--- a/index.html
+++ b/index.html
@@ -8,5 +8,80 @@
     <link rel="stylesheet" href="style.css" />
     <title>Odin landing page</title>
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <div class="logo">Header Logo</div>
+      <ul class="nav">
+        <li><a href="#">header link one</a></li>
+        <li><a href="#">header link two</a></li>
+        <li><a href="#">header link three</a></li>
+      </ul>
+    </div>
+    <section class="hero">
+      <div class="text-box">
+        <h1 class="header-primary">This website is awesome</h1>
+        <p class="subtitle">
+          This website has some subtext that goes here under the mian title.
+          It's a smaller font and the color is lower contrast
+        </p>
+        <a href="#" class="btn btn-fill">Sign up</a>
+      </div>
+      <div class="img-box"></div>
+    </section>
+    <section class="info">
+      <h2 class="header-secondary">Some random information</h2>
+      <div class="info-row">
+        <figure class="info-box">
+          <div class="info-img"></div>
+          <p class="info-text">
+            This is some subtext under an illustration or image
+          </p>
+        </figure>
+        <figure class="info-box">
+          <div class="info-img"></div>
+          <p class="info-text">
+            This is some subtext under an illustration or image
+          </p>
+        </figure>
+        <figure class="info-box">
+          <div class="info-img"></div>
+          <p class="info-text">
+            This is some subtext under an illustration or image
+          </p>
+        </figure>
+        <figure class="info-box">
+          <div class="info-img"></div>
+          <p class="info-text">
+            This is some subtext under an illustration or image
+          </p>
+        </figure>
+      </div>
+    </section>
+    <section class="testimonial">
+      <blockquote>
+        <p class="testimonial-quote">
+          THis is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space, or maybe people will actually read it. Who
+          knows? All I know is that it looks nice.
+        </p>
+        <p class="testimonial-author">&mdash;Thor, God of Thunder</p>
+      </blockquote>
+    </section>
+    <section class="cta">
+      <div class="cta-box">
+        <div class="cta-text">
+          <h3 class="header-tertiary">Call to action! It's time!</h3>
+          <p class="cta-subtitle">
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <a href="#" class="btn btn-outline">Sign up</a>
+      </div>
+    </section>
+    <div class="footer">
+      <p class="copyright">
+        Copyright &copy; The Odin Project <span class="year">2021</span>
+      </p>
+    </div>
+  </body>
 </html>
