--- a/index.html
+++ b/index.html
@@ -10,57 +10,65 @@
   </head>
   <body>
     <div class="header">
-      <div class="logo">Header Logo</div>
-      <ul class="nav">
-        <li><a href="#">header link one</a></li>
-        <li><a href="#">header link two</a></li>
-        <li><a href="#">header link three</a></li>
-      </ul>
+      <div class="header-content container">
+        <div class="logo">Header Logo</div>
+        <ul class="nav">
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
+      </div>
     </div>
     <section class="hero">
-      <div class="text-box">
-        <h1 class="header-primary">This website is awesome</h1>
-        <p class="subtitle">
-          This website has some subtext that goes here under the mian title.
-          It's a smaller font and the color is lower contrast
-        </p>
-        <a href="#" class="btn btn-fill">Sign up</a>
+      <div class="hero-content container">
+        <div class="text-box">
+          <h1 class="header-primary">This website is awesome</h1>
+          <p class="subtitle">
+            This website has some subtext that goes here under the mian title.
+            It's a smaller font and the color is lower contrast
+          </p>
+          <a href="#" class="btn btn-fill">Sign up</a>
+        </div>
+        <div class="img-box"><h4>Image here</h4></div>
       </div>
-      <div class="img-box"></div>
     </section>
     <section class="info">
-      <h2 class="header-secondary">Some random information</h2>
-      <div class="info-row">
-        <figure class="info-box">
-          <div class="info-img"></div>
-          <p class="info-text">
-            This is some subtext under an illustration or image
-          </p>
-        </figure>
-        <figure class="info-box">
-          <div class="info-img"></div>
-          <p class="info-text">
-            This is some subtext under an illustration or image
-          </p>
-        </figure>
-        <figure class="info-box">
-          <div class="info-img"></div>
-          <p class="info-text">
-            This is some subtext under an illustration or image
-          </p>
-        </figure>
-        <figure class="info-box">
-          <div class="info-img"></div>
-          <p class="info-text">
-            This is some subtext under an illustration or image
-          </p>
-        </figure>
+      <div class="info-content container">
+        <h2 class="header-secondary">Some random information</h2>
+        <div class="info-row">
+          <figure>
+            <div class="info-box">
+              <div class="info-img"></div>
+              <p class="info-text">
+                This is some subtext under an illustration or image
+              </p>
+            </div>
+          </figure>
+          <figure class="info-box">
+            <div class="info-img"></div>
+            <p class="info-text">
+              This is some subtext under an illustration or image
+            </p>
+          </figure>
+          <figure class="info-box">
+            <div class="info-img"></div>
+            <p class="info-text">
+              This is some subtext under an illustration or image
+            </p>
+          </figure>
+          <figure class="info-box">
+            <div class="info-img"></div>
+            <p class="info-text">
+              This is some subtext under an illustration or image
+            </p>
+          </figure>
+        </div>
       </div>
     </section>
     <section class="testimonial">
-      <blockquote>
+      <blockquote class="testimonial-content container">
         <p class="testimonial-quote">
-          THis is an inspiring quote, or a testimonial from a customer. Maybe
+          This is an inspiring quote, or a testimonial from a customer. Maybe
           it's just filling up space, or maybe people will actually read it. Who
           knows? All I know is that it looks nice.
         </p>
@@ -68,7 +76,7 @@
       </blockquote>
     </section>
     <section class="cta">
-      <div class="cta-box">
+      <div class="cta-box container">
         <div class="cta-text">
           <h3 class="header-tertiary">Call to action! It's time!</h3>
           <p class="cta-subtitle">
